#292 Migrated to Spring Boot 3 using OpenRewrite (#293)
* #292 Migrated to Spring Boot 3 using OpenRewrite

* Galapagos is now on Java 17
* Convert HttpSecurity configuration to Spring Security 6.1
* Replaced Keycloak libs with Standard OAuth2 libs and configuration

---------

Co-authored-by: Florian Albrecht <53865486+albrechtflo-hg@users.noreply.github.com>