@@ -4,7 +4,6 @@ import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.PrintStream;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -15,15 +14,18 @@ import com.hermesworld.ais.galapagos.kafka.KafkaCluster;
 import com.hermesworld.ais.galapagos.kafka.KafkaClusters;
 import com.hermesworld.ais.galapagos.kafka.impl.TopicBasedRepositoryMock;
 import com.hermesworld.ais.galapagos.util.JsonUtil;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
-import org.junit.Before;
-import org.junit.Test;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 import org.springframework.boot.ApplicationArguments;
 
-public class ImportKnownApplicationsJobTest {
+class ImportKnownApplicationsJobTest {
 
     private KafkaClusters kafkaClusters;
 
@@ -35,8 +37,8 @@ public class ImportKnownApplicationsJobTest {
 
     private ObjectMapper mapper;
 
-    @Before
-    public void setUp() {
+    @BeforeEach
+    void setUp() {
 
         mapper = JsonUtil.newObjectMapper();
         kafkaClusters = mock(KafkaClusters.class);
@@ -50,7 +52,7 @@ public class ImportKnownApplicationsJobTest {
     }
 
     @Test
-    public void reImportAfterAppChanges() throws Exception {
+    void reImportAfterAppChanges() throws Exception {
 
         List<KnownApplicationImpl> knownApplications = mapper.readValue(fileWithOutInfoUrl,
                 new TypeReference<List<KnownApplicationImpl>>() {
@@ -58,8 +60,7 @@ public class ImportKnownApplicationsJobTest {
 
         ImportKnownApplicationsJob job = new ImportKnownApplicationsJob(kafkaClusters);
         ApplicationArguments args = mock(ApplicationArguments.class);
-        when(args.getOptionValues("applications.import.file"))
-                .thenReturn(Collections.singletonList(fileWithInfoUrl.getPath()));
+        when(args.getOptionValues("applications.import.file")).thenReturn(List.of(fileWithInfoUrl.getPath()));
         knownApplications.forEach(app -> appRepository.save(app));
 
         // redirect STDOUT to check update count
@@ -82,7 +83,7 @@ public class ImportKnownApplicationsJobTest {
     }
 
     @Test
-    public void importApps_alreadyIdentical() throws Exception {
+    void importApps_alreadyIdentical() throws Exception {
 
         List<KnownApplicationImpl> knownApplications = mapper.readValue(fileWithOutInfoUrl,
                 new TypeReference<List<KnownApplicationImpl>>() {
@@ -90,8 +91,7 @@ public class ImportKnownApplicationsJobTest {
 
         ImportKnownApplicationsJob job = new ImportKnownApplicationsJob(kafkaClusters);
         ApplicationArguments args = mock(ApplicationArguments.class);
-        when(args.getOptionValues("applications.import.file"))
-                .thenReturn(Collections.singletonList(fileWithOutInfoUrl.getPath()));
+        when(args.getOptionValues("applications.import.file")).thenReturn(List.of(fileWithOutInfoUrl.getPath()));
         TopicBasedRepositoryMock<KnownApplicationImpl> appRepository = new TopicBasedRepositoryMock<>();
         knownApplications.forEach(app -> appRepository.save(app));
         when(kafkaClusters.getGlobalRepository("known-applications", KnownApplicationImpl.class))
@@ -116,12 +116,11 @@ public class ImportKnownApplicationsJobTest {
     }
 
     @Test
-    public void importApps_positiv() throws Exception {
+    void importApps_positiv() throws Exception {
 
         ImportKnownApplicationsJob job = new ImportKnownApplicationsJob(kafkaClusters);
         ApplicationArguments args = mock(ApplicationArguments.class);
-        when(args.getOptionValues("applications.import.file"))
-                .thenReturn(Collections.singletonList(fileWithOutInfoUrl.getPath()));
+        when(args.getOptionValues("applications.import.file")).thenReturn(List.of(fileWithOutInfoUrl.getPath()));
         TopicBasedRepositoryMock<KnownApplicationImpl> appRepository = new TopicBasedRepositoryMock<>();
         when(kafkaClusters.getGlobalRepository("known-applications", KnownApplicationImpl.class))
                 .thenReturn(appRepository);
@@ -141,9 +140,9 @@ public class ImportKnownApplicationsJobTest {
         String output = new String(buffer.toByteArray(), StandardCharsets.UTF_8);
 
         assertTrue(output.contains("\n5 new application(s) imported."));
-        assertEquals(appRepository.getObjects().size(), 5);
+        assertEquals(5, appRepository.getObjects().size());
         assertTrue(appRepository.getObject("2222").isPresent());
-        assertEquals(appRepository.getObject("F.I.V.E").get().getName(), "High Five");
+        assertEquals("High Five", appRepository.getObject("F.I.V.E").get().getName());
 
     }
 
